# patent-form-automation

./: .gitignore  pyproject.toml  requirements.txt
app/: app.py
app/backend/: state_service.py
app/constants/: constants.py
bot/: bot.py
model/: model.py
