[tool.poetry]
name = "daniel-form"
version = "0.1.0"
description = ""
authors = ["Khaliq Salawou <khaliqsalawoudeen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.48.0"
nicegui = "^2.5.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
pymupdf = "^1.24.13"
selectolax = "^0.3.25"
httpx = "^0.27.2"
dateparser = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
